WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168521
[SOUP] Handle Settings::allowsAnySSLCertificate() in SSL sockets
https://bugs.webkit.org/show_bug.cgi?id=168521
Summary
[SOUP] Handle Settings::allowsAnySSLCertificate() in SSL sockets
Carlos Garcia Campos
Reported
2017-02-17 09:02:10 PST
It's an internal setting used only for tests. Would fix http/tests/websocket/tests/hybi/simple-wss.html +CONSOLE MESSAGE: WebSocket network error: Unacceptable TLS certificate
Attachments
Patch
(3.11 KB, patch)
2017-02-17 09:04 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-02-17 09:04:38 PST
Created
attachment 301938
[details]
Patch
Michael Catanzaro
Comment 2
2017-02-17 09:41:04 PST
Comment on
attachment 301938
[details]
Patch Not great.
WebKit Commit Bot
Comment 3
2017-02-17 11:15:29 PST
Comment on
attachment 301938
[details]
Patch Clearing flags on attachment: 301938 Committed
r212561
: <
http://trac.webkit.org/changeset/212561
>
WebKit Commit Bot
Comment 4
2017-02-17 11:15:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug