[SOUP] Handle Settings::allowsAnySSLCertificate() in SSL sockets https://bugs.webkit.org/show_bug.cgi?id=168521

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2017-02-17
Reviewed by Michael Catanzaro.

When Settings::allowsAnySSLCertificate() is enabled, connect to accept-certificate signal of the GTlsConnection
to always accept the certificates.

Fixes: http/tests/websocket/tests/hybi/simple-wss.html

* platform/network/soup/SocketStreamHandleImplSoup.cpp:
(WebCore::wssConnectionAcceptCertificateCallback):
(WebCore::wssSocketClientEventCallback):
(WebCore::SocketStreamHandleImpl::create):

Canonical link: https://commits.webkit.org/185541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212561 268f45cc-cd09-0410-ab3c-d52691b4dbfc